# swc-plugin-unassert

./: .gitignore  .swcrc  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
src/: lib.rs
tests/fixtures/MemberExpression/: expected.mjs  expected.mts  input.mjs  input.mts
tests/fixtures/simple/: input.mjs
