[package]
name = "swc-plugin-unassert"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.89.*", features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_ecma_transforms_testing = "0.140.*"
swc_ecma_parser = "0.143.*"
testing = "0.35.*"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
