[package]
name = "swc-plugin-unassert"
version = "0.1.0"
edition = "2021"
authors = ["Takuto WADA <takuto.wada@gmail.com>"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
description = """
SWC plugin for unassert
"""

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
# This removes more dead code
codegen-units = 1
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"
# Strip debug symbols
strip = "symbols"

[dependencies]
serde = "1"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_ecma_transforms_testing = "0.140.*"
swc_ecma_parser = "0.143.*"
testing = "0.35.*"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
